<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".day_analyzer_module.DayAnalyzerActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
      android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/day_analyzer">
    </TextView>
<LinearLayout
    android:id="@+id/llMessages"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="@drawable/edittext_bg"
    tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/message">

    </TextView>

</LinearLayout>


    <LinearLayout
        android:id="@+id/llCalls"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edittext_bg"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/tvCalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="@string/calls">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llLocations"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        android:background="@drawable/edittext_bg"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/tvLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="@string/locations">

        </TextView>

    </LinearLayout>





</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>





